# zxing_cpp

./: .gitignore  CMakeLists.txt  README.md  composer.json  config.m4  config.w32  package.xml  php_zxing_cpp.h  win_dep.cmd  zxing_common.c  zxing_common.h  zxing_cpp.c  zxing_cpp.php  zxing_cpp_lib.cpp  zxing_cpp_lib.h  zxing_exception_class.c  zxing_exception_class.h  zxing_image_class.c  zxing_image_class.h  zxing_read_class.c  zxing_read_class.h  zxing_read_result_class.c  zxing_read_result_class.h  zxing_write_class.c  zxing_write_class.h  zxing_write_result_class.c  zxing_write_result_class.h
examples/: base.php  remove_barcode.php  replace_barcode.php  test_base.php  test_lib.php
lib/: barcode.php
tools/: doc.php  dome.php
